--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -46,6 +46,12 @@ jobs:
          run: |
            # sudo apt -qq update && sudo apt -qq install -y --no-install-recommends ffmpeg neofetch
              sudo apt -qq update && sudo apt-get install python3-pip ffmpeg
+             sudo apt install git curl python3-pip ffmpeg -y
+             pip3 install -U pip
+             curl -sL https://deb.nodesource.com/setup_16.x | sudo -E bash -
+             sudo apt install -y nodejs
+            sudo apt install build-essential
+             sudo npm install pm2@latest -g
              pip3 install -U -r requirements.txt
              pip3 install -U pip
 
